# pydantic-ai-gepa

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: explore-specs.md
.claude/skills/plan/: SKILL.md
.githooks/: post-checkout  post-commit  post-merge  post-rewrite  prepare-commit-msg
.mighty/: config.json
.mighty/loro/actors/: 019c76fe-8686-78c1-a1ef-1dac198bc927.loro  019c7789-5afa-78f3-9298-4c501bc2d9c0.loro  019c7789-5afb-7312-87f1-4d428a9c62ce.loro
.mighty/loro/agent_scopes/: 019c7789-5afa-78f3-9298-4c501bc2d9c0.loro
.mighty/loro/edges/: 019c7707-0416-79b0-ae46-80088bd259e9.loro  019c7707-2a16-73f2-8459-9deb5d887daf.loro  019c7707-5b48-7b03-9f7a-8ab38645b8d7.loro  019c7707-8d42-7411-af27-f6481f8f9225.loro  019c7707-acf1-7d60-9259-4c61c96f39b5.loro  019c7707-d4e2-7aa3-a9d5-1221527d40c7.loro  019c7708-029b-7f72-95c6-64a6c51d1cab.loro  019c7708-3319-7b71-ba32-8a3197f43cd2.loro  019c7708-5911-7b32-abe7-757aa023e8cb.loro  019c7708-78af-7bd0-83af-6ce91f4ba52a.loro  019c7708-a23d-7e52-a81a-ddfc8d57eba5.loro  019c7708-ca36-7661-a8b6-69b612f81d7d.loro  019c7709-c584-7f91-9ff2-3511d10bc49f.loro  019c7709-c5a4-7063-99ad-61ac83c9b9bd.loro  019c7709-dae3-7512-b866-836ea94c7536.loro  019c7709-dafd-7951-9490-63af153b542e.loro  019c7709-db1a-7722-9b0b-132af3a710f7.loro  019c7709-db35-7dd1-b48a-eddd9d0c22c0.loro  019c770a-0230-7da0-8376-630577527b8a.loro  019c770a-024c-7750-9b1c-5a20d13f5518.loro  019c770a-0266-73d2-b721-89339e816aa3.loro  019c770a-0283-7023-bb45-eba577c4cd2d.loro  019c770a-029d-7ed3-a40e-bcd48cfa7ee5.loro  019c770a-02b7-7790-93af-35465faf2056.loro  019c770a-02d2-7f93-b622-7a38377b5f3c.loro  019c770a-02ec-7681-8f18-2ed649f28216.loro  019c770a-0307-7072-bc1d-559ac0a15320.loro  019c770a-0322-7d83-a248-ff741b8e2acd.loro  019c770a-033f-7e82-a6d8-65bbaddbc121.loro  019c770a-32ce-71b0-b6bf-8965b2b1f5af.loro  019c770a-32ef-7c11-be12-255265166b45.loro  019c770a-330d-7520-9ac6-903c6ba8ac09.loro  019c770a-332d-7083-a945-2d614ddf5270.loro  019c770a-334c-7ce2-a6c3-11a57c2538f4.loro  019c770a-336a-75e3-bcf3-94dc3e828bf8.loro  019c770a-3387-76a2-928a-5a9c513a64c2.loro  019c770a-33a4-7e02-9ef5-945f33a923bf.loro  019c770a-33bf-7453-be3a-fd975d3674dd.loro  019c770a-33dc-7170-9eaf-af0c1ca1fdd6.loro  019c770a-33ef-7b82-97db-d285e330cdd1.loro  (+318 more)
.mighty/loro/external_actors/: 019c7789-5afb-7312-87f1-4d428a9c62ce.loro
.mighty/loro/messages/: 019c7744-f7fd-72f3-8409-9d0a13ec23ea.loro  019c7752-286d-7e82-96cd-7c16d1e7f437.loro  019c7752-5646-7cc3-a73e-e375cc7dab8d.loro  019c7752-564a-76b2-8b3c-ed26b2f9af0b.loro  019c7752-9e4d-7a91-b214-aeb89e90c1a1.loro  019c77b2-f062-70a2-8dbe-7775c397ad69.loro  019c77b2-fe3a-7420-a4f5-9d5898ad9669.loro  019c77b3-660c-7122-97c1-7ee26848cd3c.loro  019c77b3-7d36-7b30-880a-fe605fcbdd8f.loro  019c77b3-9e6f-7810-8b7e-883aaa2fc870.loro  019c77b3-c2e5-7b53-a2d0-ed1f3401c907.loro  019c77b3-cf57-7620-a9df-83197a59c3bd.loro  019c77b4-f97c-7542-b480-af7c8b2872b9.loro  019de282-86cf-78b3-9570-66b7265e7e0e.loro  019de289-d653-7821-8c6c-eea086839273.loro  019dee7c-ee49-7b30-9531-9ad3527cd1ee.loro  019dee7d-225c-7c72-a2c1-f6225f642068.loro  019dee7f-9100-71a0-b39c-63f5e399c673.loro  019dee81-aee8-7f42-9e2c-31efa86167a2.loro  019dee97-97cd-7d80-8aa7-552639af6e66.loro  019dee98-3df2-7d82-aeca-85efef56dc66.loro  019dee98-965c-7bb1-865e-793357383e2b.loro  019deea0-0af7-72a2-b405-3627f2b44498.loro  019deea1-ee0d-7902-ad22-b41462c1d311.loro  019deea2-8a39-7c02-bab8-49c2c3586902.loro  019deea6-df5f-79b2-a58b-bec7474c583e.loro  (+30 more)
docs/: rlm_adr.md  rlm_spec.md  rlm_spec_mighty.md  rlm_task_mighty.md
examples/: math_skills.py  math_tools.py  utils.py
examples/support_triage/: README.md  agent.py  dataset.jsonl  metric.py
src/pydantic_ai_gepa/: components.py  evaluation.py  input_type.py  inspection.py  models.py  runner.py  signature_agent.py  skill_components.py  tool_components.py  types.py
tests/: test_cache.py  test_case_factory.py  test_create_skill.py  test_custom_encoder.py  test_journal_tools.py  test_metric_side_info.py  test_packaging.py  test_signature.py  test_signature_user_content.py  test_signatures.py  test_skills_fs.py  test_tool_components.py
tests/cli/: test_apply_cli.py  test_candidates.py  test_components_cli.py  test_dataset.py  test_eval_cli.py  test_external_reflection_e2e.py  test_init_cli.py  test_journal_cli.py  test_layout.py  test_pareto_cli.py  test_propose_cli.py  test_run_cli.py  test_runs.py  test_store.py
tests/examples/: test_support_triage.py
tests/gepa_graph/: test_helpers.py
(+305 files in other folders)
